--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+## default connection pool
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=5
+
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5434/engine_test
+spring.datasource.username=developer
+spring.datasource.password=developer
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+
+
 
